# FH-OpenGL-HWs

./: CMakeLists.txt  README.md
VS/: 02a-vao.vcxproj  02b-ibo.vcxproj  RTG1.sln
include/util/: assets.h  camera.h  filesystem.h  mesh.h  model.h  shader.h  window.h
resources/objects/jesus/: scene.gltf
src/HW1/: Triangle.cpp  Triangle.h  colorShader.vert  main.cpp  pointFinder.py  shaders.cpp  shapes.cpp  shapes.h
src/HW2/: Triangle.cpp  Triangle.h  colorShader.frag  main.cpp  shaders.cpp  shaders.h  shapes.cpp  shapes.h  transform.vert
src/HW3/: GUI.cpp  GUI.h  bloom.fs.glsl  bloomEffect.h  blur.fs.glsl  blurEffect.h  brightExtract.fs.glsl  brightExtractEffect.h  callbacks.h  common.h  effect.h  fog.fs.glsl  fogEffect.h  framebuffer.h  input.h  main.cpp  model.fs.glsl  rendering.h  screenshader.fs.glsl  settings.h
src/HW4/: main.cpp  pbr.cpp  pbr.fs.glsl  pbr.vs.glsl
src/HW5/: main.cpp  raytracing.fs.glsl
src/HW6/: main.cpp  raymarching.fs.glsl  raymarching.vs.glsl
